--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <EditText
     android:hint="@string/usernamehint"
     android:gravity="center"
@@ -63,4 +69,6 @@
         android:layout_below="@id/buttonlayout"/>
 
 
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
