--- a/app/src/main/res/layout/fragment_navigation_drawer_user.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer_user.xml
@@ -6,5 +6,5 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
-    android:background="#339999"
+    android:background="@drawable/gradient2"
     tools:context=".NavigationDrawerFragment" />
